--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="colorOnPrimary">#000070</color>
     <color name="colorAccent">#757de8</color>
     <color name="colorPrimaryVariant">#7953d2</color>
+    <color name="buttonLabel">#FFFFFF</color>
+
 </resources>
